--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3769,3 +3769,10 @@ li a.button {
 				font-size: 70%;
 			}
 		} }
+	}
+	  .video video {
+		display: block;
+		margin: 0 auto;
+		width: 700px;
+	  }
+	  
