--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3768,11 +3768,10 @@ li a.button {
 			html {
 				font-size: 70%;
 			}
-		} }
+		} 
 	}
 	  .video video {
 		display: block;
 		margin: 0 auto;
 		width: 700px;
 	  }
-	  
