--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3780,3 +3780,6 @@ li a.button {
 		  width: 100%; /* Adjust the width as desired for mobile devices */
 		}
 	  }
+	  .customIndent {
+		padding-left: 5em;
+	  }
