--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3895,4 +3895,66 @@ li a.button {
 	50% { border-color: var(--color-tiffany) }
   }
   
+  .slideshow-container {
+	position: relative;
+	margin: 0 auto;
+	max-width: 800px;
+  }
+  
+  .slide {
+	display: none;
+	text-align: center;
+  }
+  
+  .slide img {
+	display: inline-block;
+	vertical-align: middle;
+	max-width: 100%;
+	max-height: 300px;
+  }
+  
+  .prev,
+  .next {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	padding: 16px;
+	font-size: 20px;
+	font-weight: bold;
+	color: white;
+	background-color: rgba(0, 0, 0, 0.5);
+	cursor: pointer;
+  }
+  
+  .prev {
+	left: 0;
+  }
+  
+  .next {
+	right: 0;
+  }
+  
+  .dots {
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 1;
+  }
+  
+  .dot {
+	width: 10px;
+	height: 10px;
+	margin: 0 5px;
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 50%;
+	cursor: pointer;
+  }
+  
+  .dot.active {
+	background-color: white;
+  }
   
