--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4112,4 +4112,12 @@ li a.button {
 		max-height: 800px; /* Adjust this value as needed */
 		object-fit: contain;
 	  }
-	  
+	  #myVideo {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		z-index: -1;
+	}
